chore: fix publish task, dokka and dep updates